log in page added

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -16,6 +16,11 @@
         android:name="com.example.stocky.ui.gallery.GalleryFragment"
         android:label="@string/menu_gallery"
         tools:layout="@layout/fragment_gallery" />
+    <fragment
+    android:id="@+id/nav_login"
+    android:name="com.example.stocky.ui.gallery.LoginFragment"
+    android:label="Log In"
+    tools:layout="@layout/fragment_login" />
 
     <fragment
         android:id="@+id/nav_slideshow"
